components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/resources/broker-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: art-token-broker
  labels:
    konflux-ci.dev/type: managed-tenant
