components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/resources/invalid-clusterrolebinding-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: invalid-art-token-broker-role
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-art-token-broker-actions
subjects:
- kind: ServiceAccount
  name: another-serviceaccount
  namespace: art-kueue-tenant
