components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/resources/invalid-clusterrolebinding-subject.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: invalid-art-token-broker-subject
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-viewer-bot-actions
subjects:
- kind: ServiceAccount
  name: art-token-broker
  namespace: art-token-broker
