components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/resources/invalid-extra-subject.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-art-token-broker-extra-subject
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-art-token-broker-actions
subjects:
- kind: ServiceAccount
  name: art-token-broker
  namespace: art-token-broker
- kind: ServiceAccount
  name: another-serviceaccount
  namespace: art-kueue-tenant
