components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/resources/invalid-group-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-art-token-broker-group
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-viewer-bot-actions
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: system:serviceaccounts:art-token-broker
