components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/resources/invalid-implicit-serviceaccount-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-art-token-broker-implicit-serviceaccount
  namespace: art-token-broker
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-viewer-bot-actions
subjects:
- kind: ServiceAccount
  name: art-token-broker
