components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/chainsaw-assert-validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-art-token-broker-bindings.konflux-ci.dev
status:
  observedGeneration: 1
  typeChecking: {}
